# XenC

./: .clang-format  .gitignore  CMakeLists.txt
cmake/: fetch_deps.cmake
sandbox/: CMakeLists.txt  main.c
src/: common.h  macros.h  renderer.c  renderer.h  typedefs.h  window.c  window.h
